tests/baselines/reference/alwaysStrictDeprecation.errors.txt
/foo/tsconfig.json(3,25): error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== /foo/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "alwaysStrict": false
                            ~~~~~
!!! error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        }
    }
    
==== /foo/a.ts (0 errors) ====
    const a = 1;
    